# 
# For further information see MDM community web site 
# 
# https://www.mdm-community.org 
# 
# Stop MDM community Header =======================================


0. Contents
	
	These are the release notes of the openATFX library.
	

1. Changes

	0.2.1 (Christian Rechner)
	
		- Completed implementation of the DIAdem DAT to ATFX converter.

	0.2.0 (Christian Rechner)
	
		- Enabled handling of LocalColumns having no values set.
		- Suppress writing of NULL attribute values.
		- Added DIAdem DAT to ATFX converter.
		- Implemented method "ApplElemAccess"->"deleteInstances".
		- Fixed method "isObligatory" of the interface ApplicationAttribute.
		- Fixed misspelling of ApplicationAttribute tag from "autogenerated" to "autogenerate".

	0.1.9 (Christian Rechner)
	
		- Further performance tunings.

	0.1.8 (Christian Rechner)
	
		- Performance tuning in method "getInstances" for pattern "*".
		- Performance tuning in methods "getValue" and "getValueByBaseName".
		- Several minor performance tunings.
		- Bugfix: Pattern of method "listAttributes" has not been taken into account for instance attributes.

	0.1.7 (Florian Steinberger, Christian Rechner)
	
		- Added limited query implementation.
		- Application attributes will now always be considered obligatory, if base attribute is defined as non-optional in the ODS 5.2 specification.
		- Fixed case insensitive lookup of base elements.

	0.1.6
	
		- Added workaround to read DIAdem ATFX files having the wrong relation range (100).
		- Added implicit creation of the application element 'AoExternalComponent', if missing.

	0.1.5
	
		- Fixed session close problem with JacORB.

	0.1.4
	
		- Ident XML output if context parameter "INDENT_XML=YES".
		- Omit writing of "<instance_data>" section if not instances available.
		- Added test for "InstanceElementIterator".
		- Fixed case sensitivity when comparing base attribute/relation names.
		  (Base element/attribute/relation names has to be compared case insensitive)